--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,11 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/plugins/bootstrap/css/bootstrap.min.css",
+              "src/assets/plugins/bootstrap/css/bootstrap-select.css",
+              "node_modules/ngx-toastr/toastr.css",
+              "src/assets/plugins/font-awesome/css/all.min.css",
+              "src/assets/css/main.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -103,5 +108,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
